# drops-client

./: Cargo.toml
.github/workflows/: build_binaries.yml  build_check.yml  release.yml
src/: api.rs  blackboard.rs  client_config.rs  downloading.rs  errors.rs  ipc.rs  main.rs  messages.rs  tasks.rs  utils.rs  view_utils.rs
src/handlers/: client_update.rs  download.rs  games.rs  login.rs  mod.rs  wizard.rs
